--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -865,15 +865,34 @@ body {
 					float: left;
 					width: 40%;
 				}
-				.right {}
+				.right {
+					float: right;
+					width: 60%;
+				}
+			}
+			.rateTrip[hidden],
+			.lastRooms[hidden] {
+				visibility: hidden;
+			}
+			.lastRooms {
+				padding-top: 1rem;
+				font-size: 0.8rem;
 			}
 			.room-desc {
 				display: inline-block;
-				width: 1.5rem;
+				width: 100%;
 				img {
-					display: block;
+					display: none;
 					width: 100%;
 					height: auto;
+				}
+				.label {
+					white-space: nowrap;
+					max-width: 100%;
+					text-overflow: ellipsis;
+					overflow: hidden;
+					width: 100%;
+					display: inline-block;
 				}
 			}
 			.nome {
@@ -889,6 +908,7 @@ body {
 				}
 				.apartir {
 					font-size: 0.88rem;
+					padding-bottom: 0.5rem;
 					.old-val {
 						font-size: inherit;
 						text-decoration: line-through;
@@ -914,21 +934,30 @@ body {
 					}
 				}
 			}
-			.stars {
-				span {
-					color: #ecb939;
-					font-size: 1.15rem;
-					position: relative;
-					&:before {
-						content: '\2605';
-						position: absolute;
-						left: 0;
-					}
-					&.half:before {
-						width: 50%;
-						overflow: hidden;
+			.rateStar {
+				display: inline-block;
+				.stars {
+					padding: 0.5rem 0;
+					span {
+						color: #ecb939;
+						font-size: 1.15rem;
+						position: relative;
+						&:before {
+							content: '\2605';
+							position: absolute;
+							left: 0;
+						}
+						&.half:before {
+							width: 50%;
+							overflow: hidden;
+						}
 					}
 				}
+			}
+			.location {
+				display: inline-block;
+				color: #aaa;
+				font-size: 0.8rem;
 			}
 			.amenidades {
 				li {
