--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -966,7 +966,7 @@ body {
 						display: none;
 					}
 					&>span {
-						width: 2rem;
+						padding: 0 0.2rem;
 						position: relative;
 						display: inline-block;
 						&>img {
