--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -212,6 +212,7 @@
 				</ul>
 			</div>
 		</div>
+		<span [hidden]="!infinityScrolling">Loading</span>
 	</ng-template>
 	<ng-template #other_content>{{ vars.hotelList.HotelListResponseStr }}</ng-template>
 </div>
