--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -784,10 +784,10 @@ body {
 							&>span {
 								font-size: 0.75rem;
 								font-weight: 600;
+								vertical-align: middle;
 								&>span {
 									display: inline-block;
-									vertical-align: middle;
-									font-size: 0.8em;
+									vertical-align: baseline;
 								}
 							}
 						}
@@ -848,6 +848,7 @@ body {
 				.left {
 					float: left;
 					max-width: 70%;
+					width: 70%;
 				}
 				.right {
 					float: right;
@@ -863,24 +864,30 @@ body {
 				width: 100%;
 				.left {
 					float: left;
-					width: 40%;
+					width: 47%;
 				}
 				.right {
 					float: right;
-					width: 60%;
+					width: 53%;
 				}
 			}
 			.rateTrip[hidden],
 			.lastRooms[hidden] {
-				visibility: hidden;
+				display: none;
+			}
+			.rateTrip {
+				font-weight: 600;
+				line-height: 1.5;
+				font-size: 0.9rem;
 			}
 			.lastRooms {
-				padding-top: 1rem;
+				padding-top: 0.1rem;
 				font-size: 0.8rem;
+				span {}
 			}
+			.location,
 			.room-desc {
 				display: inline-block;
-				width: 100%;
 				img {
 					display: none;
 					width: 100%;
@@ -889,26 +896,52 @@ body {
 				.label {
 					white-space: nowrap;
 					max-width: 100%;
-					text-overflow: ellipsis;
+					text-overflow: clip;
 					overflow: hidden;
 					width: 100%;
 					display: inline-block;
 				}
+			}
+			.room-desc {
+				width: 100%;
 			}
 			.nome {
 				font-size: 1.2rem;
 				color: #222;
 				display: block;
 			}
+			.ndwrap {
+				display: block;
+				width: 100%;
+				position: relative;
+				padding-top: 0.75rem;
+				.rateStar,
+				.location {
+					display: block;
+					float: left;
+				}
+				.rateStar {
+					max-width: 28%;
+					line-height: 0;
+				}
+				.location {
+					width: 72%;
+					line-height: 1.4;
+					padding: 0 0.2rem;
+				}
+			}
+
 			.preco {
+				padding-bottom: 0.4rem;
 				.aincluir {
 					display: block;
-					font-size: .75rem;
+					padding-bottom: 0.4rem;
+					font-size: 0.69rem;
 					color: #222;
 				}
 				.apartir {
-					font-size: 0.88rem;
-					padding-bottom: 0.5rem;
+					padding-bottom: 0.1rem;
+					font-size: 0.69rem;
 					.old-val {
 						font-size: inherit;
 						text-decoration: line-through;
@@ -923,14 +956,16 @@ body {
 						white-space: nowrap;
 						right: 100%;
 						top: 50%;
-						font-size: .75rem;
+						padding-top: 0.1rem;
+						font-size: 0.69rem;
 						margin-right: 0.4rem;
 						color: #222;
 						transform: translate(0, -50%);
 					}
 					.val {
-						font-size: 1.7rem;
+						font-size: 1.3rem;
 						display: block;
+						font-weight: 600;
 					}
 				}
 			}
@@ -941,6 +976,7 @@ body {
 					span {
 						color: #ecb939;
 						font-size: 1.15rem;
+						letter-spacing: -0.17rem;
 						position: relative;
 						&:before {
 							content: '\2605';
@@ -969,6 +1005,7 @@ body {
 						padding: 0 0.2rem;
 						position: relative;
 						display: inline-block;
+						font-size: 0.9rem;
 						&>img {
 							display: block;
 							height: auto;
@@ -978,8 +1015,11 @@ body {
 				}
 			}
 			.details {
-				padding-top: 1rem;
+				position: relative;
 				.selecionar {
+					display: block;
+					position: relative;
+					float: right;
 					a {
 						cursor: pointer;
 						text-decoration: none;
@@ -989,16 +1029,32 @@ body {
 						margin: 0 0 0 0.5rem;
 						float: right;
 						border-radius: 4px;
+						font-size: 1.2rem;
 					}
 				}
 				.tarifa {
+					position: absolute;
+					height: 100%;
+					width: auto;
+					.non-refundable,
 					.refundable {
+						padding-top: 0.1rem;
+						font-size: 0.8rem;
 						display: block;
+						font-weight: 600;
+						font-size: 0.7rem;
+					}
+					.refundable {
+						color: forestgreen;
 					}
 					.iof {
 						display: block;
-						font-size: .75rem;
 						color: #222;
+						font-size: 0.69rem;
+						position: absolute;
+						bottom: 0;
+						right: 0;
+						padding-bottom: 0.2rem;
 					}
 				}
 			}
