--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -142,7 +142,7 @@
 			<div class="cards">
 				<div class="stickie" ngui-sticky sticky-after=".sub .txt">
 					<div class="wrap">
-						<ul>
+						<ul class="sort">
 							<li>
 								<a href="javascript:;">
 									<span>Sugestões</span>
