--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -747,8 +747,13 @@ body {
 			.stickie {
 				position: relative;
 				float: left;
-				z-index: 1;
+				z-index: 2;
+				padding: 0.6rem;
+				font-weight: 600;
 				width: 100%;
+				background-color: #fff;
+				transform: scale(1.1, 1.1);
+				font-size: 0.8rem;
 				&.ngui-sticky-unstuck {
 					position: relative !important;
 					top: auto !important;
