--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -261,7 +261,7 @@
 										</div>
 										<div class="cheio">
 											<span class="media">Média / Noite</span>
-											<span class="val" [attr.data-tooltip]="['storeCommission%: ' +item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.storeCommissionPercent,'storeCommission: ' +item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.storeCommission].join(' &#013; ')" [textContent]="'R$ ' + item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.averageFinalPrice"></span>
+											<span class="val wideTip" [attr.data-tooltip]="['Comissão%: ' +item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.storeFinalCommPercent,'ComissãoR$: ' +item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.storeFinalComm].join(' &#013; ')" [textContent]="'R$ ' + item.RoomRateDetailsList.RoomRateDetails.RateInfos.RateInfo.averageFinalPrice"></span>
 										</div>
 									</div>
 									<div class="details wrap">
