--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -799,6 +799,37 @@ body {
 									display: inline-block !important;
 								}
 							}
+							&.maps {
+								a {
+									overflow: hidden;
+									width: 7rem;
+									display: inline-block;
+									height: 2rem;
+									vertical-align: middle;
+									position: relative;
+									& .fa {
+										position: absolute;
+										top: 4px;
+										left: 50%;
+										transform: translate(-50%, 0);
+									}
+									span {
+										display: block;
+										text-align: center;
+										position: absolute;
+										bottom: 0;
+										left: 50%;
+										transform: translate(-50%, 0);
+										font-size: 0.8rem;
+										white-space: nowrap;
+										font-weight: 600;
+									}
+									img {
+										margin: 0;
+										display: block;
+									}
+								}
+							}
 							&.compare {
 								a {
 									text-decoration: none;
@@ -906,8 +937,6 @@ body {
 					}
 				}
 			}
-		}
-		.cards {
 			.top,
 			.bot {
 				.left {
@@ -1153,6 +1182,32 @@ body {
 			& .compBtn span {
 				width: 2.5rem;
 				display: block;
+			}
+		}
+		.filtro {
+			h3 {}
+			.filtros {}
+			.hotelname {
+				label {
+					span {
+						text-transform: uppercase;
+						color: #888;
+						display: block;
+					}
+					input {
+						display: inline-block;
+					}
+				}
+				a.btn {
+					display: inline-block;
+					color: #fff;
+					text-decoration: none;
+					span {
+						padding: 0.4rem;
+						display: block;
+						border-radius: 4px;
+					}
+				}
 			}
 		}
 	}
